# ctm-viewer

./: .gitignore  CMakeLists.txt  README.md
docs/: ONBOARDING.md  TECHNICAL.md  TESTING.md  公共组件编写规范.md  软件设计风格规范.md
resources/: app.qrc
scripts/: package.ps1
src/: AppStyle.h  ColorBarWidget.cpp  ColorBarWidget.h  FieldColorMap.cpp  FieldColorMap.h  FieldSimulator.cpp  FloatPanel.cpp  FloatPanel.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  VtkRenderWidget.cpp  VtkRenderWidget.h  main.cpp
tests/: CMakeLists.txt
